syntax = "proto3";

import "google/protobuf/empty.proto";

package Scheduler;

service SchedulerService {
    rpc getData(Empty) returns (WorkingShiftsDto);
    rpc handleFingerPrint(google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc notifyApplicationRunning(google.protobuf.Empty) returns (ApplicationStatus);
}

message ApplicationStatus {
    string status = 1;
}

message Empty {}

message WorkingShiftsDto{
    repeated WorkingScheduleTemplate data = 1;
}

message WorkingScheduleTemplate {
    int32 id = 1;
    string scheduleDate = 2;
    string startWorkingTime = 3;
    string endWorkingTime = 4;
    responseEmployeeTemplate employeeId = 5;
}

message CompanyStructureOutLetDto {
    repeated CompanyStructure date = 1;
}

message CompanyStructure {
    int32 id = 1;
    string ipAddress = 2;
}

message responseEmployeeTemplate {
    int32 id = 1;
    string email = 2;
    string firstNameEn = 3;
    string dob = 4;
    string gender = 5;
    string startDate = 6;
    string maritalStatus = 7;
    optional WorkingShift workingShiftId = 8;
    int32 positionLevelId = 9;
    int32 createdBy = 10;
    string lastNameEn = 11;
    int32 userId = 12;
    string location = 13;
    string outlet = 14;
    string department = 15;
    string position = 16;
    string displayFullNameEn = 17;
}

message WorkingShift {
    int32 id = 1;
    string name = 2;
}

